src/css/weave.css
/* ... */
.weave-hslider .rc-slider {
	background-color: #D0D0D0;
}

.weave-vslider .rc-slider-vertical {
    width: 2px;
	z-index: 0;
}

.weave-vslider .rc-slider-dot {
	position: absolute;
	bottom: -3px;
	margin-left: -4px;
	width: 8px;
	height: 1px;
	border: 1px solid #D0D0D0;
	/* background-color: #fff; */
	cursor: pointer;
	/* border-radius: 50%; */
	vertical-align: middle;
}

.weave-vslider .rc-slider-dot-active {
	border-color: #D0D0D0;
}

.weave-vslider .rc-slider {
	background-color: #D0D0D0;
}

.weave-vslider .rc-slider-vertical .rc-slider-dot {
    left: 1px;
    margin-bottom: -1px;
}

.weave-vslider .rc-slider-vertical .rc-slider-track {
	width: 2px;
}

.weave-vslider .rc-slider-vertical .rc-slider-dot:last-child {
	margin-bottom: -1px;
}

.weave-vslider .rc-slider-vertical .rc-slider-dot {
	margin-bottom: -1px;
}

.weave-vslider .rc-slider-track {
	position: absolute;
	left: 0;
	height: 2px;
	border-radius: 6px;
	background-color: #D0D0D0;
	z-index: 0;
}

.weave-vslider .rc-slider-vertical .rc-slider-handle {
	margin-left: -6px;
}

/* react fixed data table */
div.table-row-probed>div>div>div>div>div {
	background-color: rgba(153, 214, 255, 0.4)
}

div.table-row-probed-selected>div>div>div>div>div {
	background-color : #99D6FF;
}

div.table-row-selected>div>div>div>div>div {
	background-color: #80CCFF;
}

.public_fixedDataTable_header, .public_fixedDataTable_header .public_fixedDataTableCell_main {
	background-color: #F8F8F8;
	background-image: none; /* needed for override of item in fixed data table css */
}

.public_fixedDataTableCell_cellContent {
	white-space: nowrap;
	padding: 4px;
}

.weave-disableBottomBorder .fixedDataTableLayout_header,
.weave-disableBottomBorder .fixedDataTableLayout_hasBottomBorder {
	border-style: none;
}

.fixedDataTableLayout_hasBottomBorder {
	border-style: none;
}


/* weave custom css */
.weave-app {
	user-select: none;
	-webkit-user-select: none;
	-moz-user-select: none;
}

/* table */
.weave-table {
	font-size: inherit;
	white-space: nowrap;
}

.weave-table-header {
	background-color: #eee;
	color: -webkit-text;
}

/* tool */
.weave-tool {
	background-color: white;
}

.weave-tool-title-bar {
	visibility: hidden;
	font-size: 14;
	border-bottom: 1px solid #ffffff;
	transition: visibility 0s 0.1s, opacity 0.1s linear;
	-webkit-transition: visibility 0s 0.1s, opacity 0.1s linear;
}

.weave-tool-title-bar-hovered {
	visibility: visible;
	font-size: 14;
	background-color: #f8f8f8;
	border-bottom: 1px solid #e6e6e6;
	transition: visibility 0s 0.1s, opacity 0.1s linear;
	-webkit-transition: visibility 0s 0.1s, opacity 0.1s linear;
}

.weave-tool-title-bar-highlighted {
	background-color: #e0e0e0;
}

.weave-tool-title-bar-text {
	font-family: Roboto, sans-serif;
	font-size: 16px;
	font-weight: bold;
	font-style: normal;
	text-decoration: none;
	white-space: nowrap;
	text-overflow: ellipsis;
}

/* icon */
.weave-icon{
	padding: 5px 5px 5px 5px;
}

.weave-icon-button{
	padding: 5px;
	border-radius:4px;
	color:grey;
 }

 .weave-icon:hover {
 	background-color: rgba(0,0,0,.05);
 }

 .weave-icon:active {
 	background-color: #CCCCCC;
 }

.weave-icon-button-mouse-over{
	padding: 5px;
	border-color: grey;
	border-radius:4px;
	color:white;
	background:grey;
}

/* containers */
.weave-container {
	border:1px solid #ddd;
	padding: 8px;
}

.weave-dialog-overlay {
	background-color: #ccc;
	opacity: .5;
}

/**** container - FlexBox *****/
.weave-padded-vbox > * {
	margin-top: 8px;
}

.weave-padded-vbox > *:nth-child(1) {
	margin-top: 0px;
}


.weave-padded-hbox > * {
	margin-left: 8px;
}
.weave-padded-hbox > *:nth-child(1) {
	margin-left: 0px;
}

.weave-hDividedBox-resizer {
	width:2px;
	background-color: #fff;
	opacity: .1;
}

.weave-vDividedBox-resizer {
	height:2px;
	background-color: #fff;
	opacity: .1;
}



/***** popup window ******/

.weave-window {
	overflow: hidden;
	border: 1px solid rgb(171, 167, 167);
	background-color: #FFFFFF;
	box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.2);
	-webkit-box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
	-moz-box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
}

.weave-header {
	display: flex;
	flex-direction: row;
	align-items: center;
	padding: 4px;
	cursor: default;
	font-weight: 300;
}

/* same weave-menubar but can be customized */
.weave-header.weave-window-header {
	border-bottom-width: 1px;
	border-bottom-color: #E6E6E6;
	background-color: #D5D5D5;
	padding: 4px 8px 4px 8px;
}

.weave-window-content {
	padding: 8px;
}

/* tabs */
.weave-tab-container {
	border-left: 1px solid #ddd;
}

.weave-tab-label-container {
	border-bottom: 1px solid #ddd;
}

.weave-tab-label { /* border left , will come from left child,first child gets from Container, border-bottom comes from label container */
	padding-left: 8;
	padding-right: 8;
	padding-top: 5;
	padding-bottom: 5;
	cursor: default;
	border-top: 1px solid #ddd;
	border-right: 1px solid #ddd;
	background: #F8F8F8;
}

.weave-tab-label-active { /* todo: border bottom white is not right way has to match backgroundcolor */
	margin-bottom: -1px; /* to cover the label container border*/
	border-bottom: 1px solid white;
	border-right: 1px solid #ddd;
	border-top: 1px solid #ddd;
	background: none;
}

.weave-tab-content { /* border left , comes from container to cover label region too , top comes from label to distinct the active label */
	padding: 8px;
	border-right: 1px solid #ddd;
	border-bottom: 1px solid #ddd;
}


/* menus */
.weave-menu {
	box-shadow: 0 1px 3px 0 rgba(0,0,0,.08);
	-webkit-box-shadow: 0 1px 3px 0 rgba(0,0,0,.08);
	-moz-box-shadow: 0 1px 3px 0 rgba(0,0,0,.08);
	border-radius: 3px;
	background-color: #FFFFFF;
	padding-top: 3px;
	padding-bottom: 3px;
	user-select: none;
	-webkit-user-select: none;
	-moz-user-select: none;
	cursor: pointer;
	z-index: 2147483647; /* max z-index */
	border: 1px solid rgba(34,36,38,.15);
}
/* ... */

